syntax = "proto3";

package agent.v1;

enum RecordingMode {
  RECORDING_MODE_UNSPECIFIED = 0;
  RECORDING_MODE_START_RECORDING = 1;
  RECORDING_MODE_SAVE_RECORDING = 2;
  RECORDING_MODE_DISCARD_RECORDING = 3;
}

enum RequestedFilePathRejectedReason {
  REQUESTED_FILE_PATH_REJECTED_REASON_UNSPECIFIED = 0;
  REQUESTED_FILE_PATH_REJECTED_REASON_SLASHES_NOT_ALLOWED = 1;
}

message RecordScreenToolCall {
  RecordScreenArgs args = 1;
  RecordScreenResult result = 2;
}

message RecordScreenArgs {
  RecordingMode mode = 1;
  string tool_call_id = 2;
  optional string save_as_filename = 3;
}

message RecordScreenResult {
  oneof result {
    RecordScreenStartSuccess start_success = 1;
    RecordScreenSaveSuccess save_success = 2;
    RecordScreenDiscardSuccess discard_success = 3;
    RecordScreenFailure failure = 4;
  }
}

message RecordScreenStartSuccess {
  bool was_prior_recording_cancelled = 1;
  bool was_save_as_filename_ignored = 2;
}

message RecordScreenSaveSuccess {
  string path = 1;
  int64 recording_duration_ms = 2;
  optional RequestedFilePathRejectedReason requested_file_path_rejected_reason = 3;
}

message RecordScreenDiscardSuccess {
}

message RecordScreenFailure {
  string error = 1;
}
