syntax = "proto3";

package agent.v1;

import "agent/v1/sandbox.proto";
import "agent/v1/shell_exec.proto";

message BackgroundShellSpawnArgs {
  string command = 1;
  string working_directory = 2;
  string tool_call_id = 3;
  ShellCommandParsingResult parsing_result = 4;
  optional SandboxPolicy sandbox_policy = 5;
  bool enable_write_shell_stdin_tool = 6;
}

message BackgroundShellSpawnResult {
  oneof result {
    BackgroundShellSpawnSuccess success = 1;
    BackgroundShellSpawnError error = 2;
    ShellRejected rejected = 3;
    ShellPermissionDenied permission_denied = 4;
  }
}

message BackgroundShellSpawnSuccess {
  uint32 shell_id = 1;
  string command = 2;
  string working_directory = 3;
  optional uint32 pid = 4;
}

message BackgroundShellSpawnError {
  string command = 1;
  string working_directory = 2;
  string error = 3;
}
