syntax = "proto3";

package agent.v1;

import "agent/v1/utils.proto";
import "agent/v1/shell_exec.proto";
import "agent/v1/write_exec.proto";
import "agent/v1/delete_exec.proto";
import "agent/v1/grep_exec.proto";
import "agent/v1/read_exec.proto";
import "agent/v1/ls_exec.proto";
import "agent/v1/diagnostics_exec.proto";
import "agent/v1/request_context_exec.proto";
import "agent/v1/mcp_tool.proto";
import "agent/v1/background_shell_exec.proto";
import "agent/v1/mcp_resource_tool.proto";
import "agent/v1/fetch_tool.proto";
import "agent/v1/record_screen_tool.proto";
import "agent/v1/computer_use_tool.proto";
import "agent/v1/write_shell_stdin_tool.proto";
import "agent/v1/subagents.proto";

message ExecClientStreamClose {
  uint32 id = 1;
}

message ExecClientThrow {
  uint32 id = 1;
  string error = 2;
  optional string stack_trace = 3;
}

message ExecClientHeartbeat {
  uint32 id = 1;
}

message ExecClientControlMessage {
  oneof message {
    ExecClientStreamClose stream_close = 1;
    ExecClientThrow throw = 2;
    ExecClientHeartbeat heartbeat = 3;
  }
}

message AbortArgs {
}

message AbortResult {
}

message ExecuteHookArgs {
  ExecuteHookRequest request = 1;
}

message ExecuteHookRequest {
  oneof request {
    PreCompactRequestQuery pre_compact = 1;
    SubagentStartRequestQuery subagent_start = 2;
    SubagentStopRequestQuery subagent_stop = 3;
  }
}

message ExecuteHookResponse {
  oneof response {
    PreCompactRequestResponse pre_compact = 1;
    SubagentStartRequestResponse subagent_start = 2;
    SubagentStopRequestResponse subagent_stop = 3;
  }
}

message ExecuteHookResult {
  ExecuteHookResponse response = 1;
}

message PreCompactRequestQuery {
  string trigger = 1;
  double context_usage_percent = 2;
  int64 context_tokens = 3;
  int64 context_window_size = 4;
  int32 message_count = 5;
  int32 messages_to_compact = 6;
  bool is_first_compaction = 7;
  optional string conversation_id = 8;
  optional string generation_id = 9;
  optional string model = 10;
}

message PreCompactRequestResponse {
  optional string user_message = 1;
}

// SubagentStartRequestQuery, SubagentStartRequestResponse,
// SubagentStopRequestQuery, SubagentStopRequestResponse
// are defined in subagents.proto

message ExecServerAbort {
  uint32 id = 1;
}

message ExecServerControlMessage {
  oneof message {
    ExecServerAbort abort = 1;
  }
}

message ExecServerMessage {
  uint32 id = 1;
  string exec_id = 15;
  optional SpanContext span_context = 19;
  oneof message {
    ShellArgs shell_args = 2;
    WriteArgs write_args = 3;
    DeleteArgs delete_args = 4;
    GrepArgs grep_args = 5;
    ReadArgs read_args = 7;
    LsArgs ls_args = 8;
    DiagnosticsArgs diagnostics_args = 9;
    RequestContextArgs request_context_args = 10;
    McpArgs mcp_args = 11;
    ShellArgs shell_stream_args = 14;
    BackgroundShellSpawnArgs background_shell_spawn_args = 16;
    ListMcpResourcesExecArgs list_mcp_resources_exec_args = 17;
    ReadMcpResourceExecArgs read_mcp_resource_exec_args = 18;
    FetchArgs fetch_args = 20;
    RecordScreenArgs record_screen_args = 21;
    ComputerUseArgs computer_use_args = 22;
    WriteShellStdinArgs write_shell_stdin_args = 23;
    ExecuteHookArgs execute_hook_args = 27;
  }
}

message ExecClientMessage {
  uint32 id = 1;
  string exec_id = 15;
  oneof message {
    ShellResult shell_result = 2;
    WriteResult write_result = 3;
    DeleteResult delete_result = 4;
    GrepResult grep_result = 5;
    ReadResult read_result = 7;
    LsResult ls_result = 8;
    DiagnosticsResult diagnostics_result = 9;
    RequestContextResult request_context_result = 10;
    McpResult mcp_result = 11;
    ShellStream shell_stream = 14;
    BackgroundShellSpawnResult background_shell_spawn_result = 16;
    ListMcpResourcesExecResult list_mcp_resources_exec_result = 17;
    ReadMcpResourceExecResult read_mcp_resource_exec_result = 18;
    FetchResult fetch_result = 20;
    RecordScreenResult record_screen_result = 21;
    ComputerUseResult computer_use_result = 22;
    ExecuteHookResult execute_hook_result = 27;
    WriteShellStdinResult write_shell_stdin_result = 23;
  }
}

message ExecStreamElement {
  oneof element {
    ExecClientMessage exec_client_message = 1;
    ExecClientControlMessage exec_client_control_message = 2;
  }
}

enum EntryType {
  ENTRY_TYPE_UNSPECIFIED = 0;
  ENTRY_TYPE_FILE = 1;
  ENTRY_TYPE_DIRECTORY = 2;
  ENTRY_TYPE_SYMLINK = 3;
}

message DirectoryEntry {
  string name = 1;
  string path = 2;
  EntryType type = 3;
  uint64 size_bytes = 4;
  int64 modified_at_unix_ms = 5;
}

message ListDirectoryRequest {
  string path = 1;
  bool include_hidden = 2;
}

message ListDirectoryResponse {
  repeated DirectoryEntry entries = 1;
}

message PingRequest {
}
