syntax = "proto3";

package agent.v1;

message WriteShellStdinToolCall {
  WriteShellStdinArgs args = 1;
  WriteShellStdinResult result = 2;
}

message WriteShellStdinArgs {
  uint32 shell_id = 1;
  string chars = 2;
}

message WriteShellStdinResult {
  oneof result {
    WriteShellStdinSuccess success = 1;
    WriteShellStdinError error = 2;
  }
}

message WriteShellStdinSuccess {
  uint32 shell_id = 1;
  uint32 terminal_file_length_before_input_written = 2;
}

message WriteShellStdinError {
  string error = 1;
}
